--- a/PGM.ipynb
+++ b/PGM.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "pgmpy.base.DAG.DAG"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,9 +41,13 @@
    "source": [
     "from pgmpy.base import DAG\n",
     "G = DAG()\n",
-    "type(G)\n",
-    "G.add_nod"
+    "type(G)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
